# meetrecorder

./: .gitignore  LICENSE  README.md  build.bat  config.example.yaml  meeting-recorder-roadmap.md  meeting-recorder-spec.md  pyproject.toml  requirements.txt
meeting_recorder/: __init__.py  __main__.py  config.py  dashboard.py  html_report.py  llm_client.py  naming.py  pipeline.py  recorder.py  report.py  session_utils.py  transcriber.py  tray.py
meeting_recorder/prompts/: highlights.md  protocol_clean.md  summary.md
meeting_recorder/templates/: base.html  index.html  session.html
tests/: __init__.py  conftest.py  test_config.py  test_dashboard.py  test_html_report.py  test_llm_client.py  test_main.py  test_naming.py  test_pipeline.py  test_recorder.py  test_report.py  test_transcriber.py  test_tray.py
