[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["meeting_recorder*"]

[project]
name = "meeting-recorder"
version = "0.1.0"
description = "Запись экрана и звука, транскрипция с диаризацией, протокол и summary-отчёт"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "openai>=1.10.0,<2",
    "click>=8.1,<9",
    "rich>=13.0,<14",
    "whisperx>=3.1.2,<4",
    "faster-whisper>=1.0.0,<2",
    "pyannote.audio>=3.1.0,<4",
    "torch>=2.1.0,<3",
    "torchaudio>=2.1.0,<3",
    "numpy>=1.26,<2",
    "soundfile>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
audio = [
    "resampy>=0.4.0",
]

[project.scripts]
mrec = "meeting_recorder.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 88
